# platform-instance-init

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  configuration.toml.example  package.spec
.github/workflows/: package-build.yaml
src/: configuration.rs  http_client.rs  main.rs
src/host/: error.rs  mod.rs
src/provider/: error.rs  mod.rs
src/provider/exoscale/: api.rs  configuration.rs  mod.rs
systemd/: disable-sshd-keygen-if-instance-init-active.conf  instance-init.service  instance-init.target
