[package]
name = "instance-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1.68" }
base64 = "0.13"
env_logger = "0.10.0"
hmac = "0.11"
hyper = { version = "0.14", features = ["client"] }
hyper-rustls = { version = "0.24.0", features = ["http2"] }
log = { version = "0.4.18" }
rustls = { version = "0.21.1" }
rustls-pemfile = { version = "1.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = "0.9"
toml = { version = "0.7.4" }
tokio = { version = "1", features = ["full"] }
